--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -1,11 +1,12 @@
 <html>
 <head>
-<title>Page Title</title>
+<title>Crowd Science Map</title>
+<link rel="shortcut icon" href="images/penguin.ico" />
 </head>
 <body>
 
 <h1>This is a Heading</h1>
-<p>This is a paraf=graph.</p>
+<p>Underconstruction.</p>
 
 </body>
 </html>
