--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Crowd Science Map</title>
-<link rel="shortcut icon" href="images/penguin.ico" />
+<link rel="shortcut icon" href="images/simplecloud.ico" />
 </head>
 <body>
 
