add favicon link and heading style

--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -1,12 +1,23 @@
 <html>
-<head>
-<title>Crowd Science Map</title>
-<link rel="shortcut icon" href="images/simplecloud.ico" />
-</head>
-<body>
-
-<h1>This is a Heading</h1>
-<p>Underconstruction.</p>
-
-</body>
+	<head>
+		<title>Crowd Science Map</title>
+		<style>
+		div
+		{
+		text-align:center;
+		border:2px solid #a1a1a1;
+		padding:10px 40px;
+		background:#dddddd;
+		width:350px;
+		border-radius:25px;
+		}
+		</style>
+		<link rel="shortcut icon" href="images/simplecloud.ico" />
+	<head>
+	<body>
+		<div>
+		<h1>This is a Heading</h1>
+		</div>
+		<p>Under construction.</p>
+	</body>
 </html>
