add background link

--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -11,12 +11,17 @@
 		width:350px;
 		border-radius:25px;
 		}
+		
+		body
+		{
+		background-image:url("images/circuit_board.gif");
+		}
 		</style>
 		<link rel="shortcut icon" href="images/simplecloud.ico" />
 	<head>
 	<body>
 		<div>
-		<h1>This is a Heading</h1>
+		<h1>Crowd Science Map</h1>
 		</div>
 		<p>Under construction.</p>
 	</body>
