font-awesome for useful icons

--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -2,27 +2,50 @@
 	<head>
 		<title>Crowd Science Map</title>
 		<style>
-		div
-		{
-		text-align:center;
-		border:2px solid #a1a1a1;
-		padding:10px 40px;
-		background:#dddddd;
-		width:350px;
-		border-radius:25px;
+		h1 {
+			text-align:center;
+			border:2px solid #a1a1a1;
+			padding:10px 40px;
+			background:#dddddd;
+			width:350px;
+			border-radius:25px;
 		}
 		
-		body
-		{
-		background-image:url("images/circuit_board.gif");
+		body {
+			background-image:url("images/circuit_board.gif");
 		}
+		
+
 		</style>
+	
+		<!-- favicon link-->
 		<link rel="shortcut icon" href="images/simplecloud.ico" />
-	<head>
+		<!-- font-awesome link-->
+		<link rel="stylesheet" href="font-awesome-4.4.0/css/font-awesome.css">
+	</head>
 	<body>
-		<div>
+		<!-- css test-->
 		<h1>Crowd Science Map</h1>
-		</div>
+		
 		<p>Under construction.</p>
+		<!-- font-awesome test-->
+		<i class="fa fa-camera-retro"></i> fa-camera-retro
+		<i class="fa fa-refresh fa-spin"></i>
+		
+		<br>
+		<button class="btn btn-lg btn-success" href="#">
+			<i class="fa fa-flag fa-2x pull-left"></i> Font Awesome<br>Version 4.4.0<br>btn feature not work</button>
+		
+		<div class="input-group margin-bottom-sm">
+			<span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
+			<input class="form-control" type="text" placeholder="Email address">
+		</div>
+		<div class="input-group">
+			<span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
+			<input class="form-control" type="password" placeholder="Password">
+		</div>
+
+		
+
 	</body>
 </html>
