add bootstrap link

--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -22,6 +22,8 @@
 		<link rel="shortcut icon" href="images/simplecloud.ico" />
 		<!-- font-awesome link-->
 		<link rel="stylesheet" href="font-awesome-4.4.0/css/font-awesome.css">
+		<!-- bootstrap link-->
+		<link rel="stylesheet" href="http://apps.bdimg.com/libs/bootstrap/3.3.0/css/bootstrap.min.css">
 	</head>
 	<body>
 		<!-- css test-->
@@ -33,8 +35,8 @@
 		<i class="fa fa-refresh fa-spin"></i>
 		
 		<br>
-		<button class="btn btn-lg btn-success" href="#">
-			<i class="fa fa-flag fa-2x pull-left"></i> Font Awesome<br>Version 4.4.0<br>btn feature not work</button>
+		<a class="btn btn-lg btn-success" href="#">
+			<i class="fa fa-flag fa-2x pull-left"></i> Font Awesome<br>Version 4.4.0</a>
 		
 		<div class="input-group margin-bottom-sm">
 			<span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
@@ -45,7 +47,24 @@
 			<input class="form-control" type="password" placeholder="Password">
 		</div>
 
-		
+		<button type="button" class="btn btn-default">Default</button>
+		<button type="button" class="btn btn-primary">Primary</button>
+		<button type="button" class="btn btn-success">Success</button>
+		<button type="button" class="btn btn-info">Info</button>
+		<button type="button" class="btn btn-warning">Warning</button>
+		<button type="button" class="btn btn-danger">Danger</button>
 
+		<div class="btn-group open">
+			<a class="btn btn-primary" href="#"><i class="fa fa-user fa-fw"></i> User</a>
+			<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">
+				<span class="fa fa-caret-down"></span></a>
+			<ul class="dropdown-menu">
+				<li><a href="#"><i class="fa fa-pencil fa-fw"></i> Edit</a></li>
+				<li><a href="#"><i class="fa fa-trash-o fa-fw"></i> Delete</a></li>
+				<li><a href="#"><i class="fa fa-ban fa-fw"></i> Ban</a></li>
+				<li class="divider"></li>
+				<li><a href="#"><i class="i"></i> Make admin</a></li>
+			</ul>
+		</div>
 	</body>
 </html>
