implement links for bootstrap

--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -24,6 +24,8 @@
 		<link rel="stylesheet" href="font-awesome-4.4.0/css/font-awesome.css">
 		<!-- bootstrap link-->
 		<link rel="stylesheet" href="http://apps.bdimg.com/libs/bootstrap/3.3.0/css/bootstrap.min.css">
+		<script src="http://apps.bdimg.com/libs/jquery/2.0.0/jquery.min.js"></script>
+		<script src="http://apps.bdimg.com/libs/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 	</head>
 	<body>
 		<!-- css test-->
@@ -54,6 +56,7 @@
 		<button type="button" class="btn btn-warning">Warning</button>
 		<button type="button" class="btn btn-danger">Danger</button>
 
+		<br>
 		<div class="btn-group open">
 			<a class="btn btn-primary" href="#"><i class="fa fa-user fa-fw"></i> User</a>
 			<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">
