--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -1,73 +1,42 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>Crowd Science Map</title>
-		<style>
-		h1 {
-			text-align:center;
-			border:2px solid #a1a1a1;
-			padding:10px 40px;
-			background:#dddddd;
-			width:350px;
-			border-radius:25px;
-		}
-		
-		body {
-			background-image:url("images/circuit_board.gif");
-		}
-		
-
-		</style>
-	
+		<!-- css -->
+		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 		<!-- favicon link-->
 		<link rel="shortcut icon" href="images/simplecloud.ico" />
-		<!-- font-awesome link-->
-		<link rel="stylesheet" href="font-awesome-4.4.0/css/font-awesome.css">
-		<!-- bootstrap link-->
-		<link rel="stylesheet" href="http://apps.bdimg.com/libs/bootstrap/3.3.0/css/bootstrap.min.css">
-		<script src="http://apps.bdimg.com/libs/jquery/2.0.0/jquery.min.js"></script>
-		<script src="http://apps.bdimg.com/libs/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+		<title>Crowd Science Map</title>
 	</head>
 	<body>
-		<!-- css test-->
-		<h1>Crowd Science Map</h1>
-		
-		<p>Under construction.</p>
-		<!-- font-awesome test-->
-		<i class="fa fa-camera-retro"></i> fa-camera-retro
-		<i class="fa fa-refresh fa-spin"></i>
-		
-		<br>
-		<a class="btn btn-lg btn-success" href="#">
-			<i class="fa fa-flag fa-2x pull-left"></i> Font Awesome<br>Version 4.4.0</a>
-		
-		<div class="input-group margin-bottom-sm">
-			<span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
-			<input class="form-control" type="text" placeholder="Email address">
+		<div id="header">
+			<div id="navbar">
+				<ul>
+					<li><a href="https://facebook.com">Submit</a></li>
+					<li><a href="admin.html">Admiin</a></li>
+					<li>Log out</li>
+					<li>Log in/Register</li>
+				</ul>
+			</div>
+			<h2>Crowd Science</h2>
 		</div>
-		<div class="input-group">
-			<span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
-			<input class="form-control" type="password" placeholder="Password">
+		<div id="left">
+			<p>map</p>
 		</div>
-
-		<button type="button" class="btn btn-default">Default</button>
-		<button type="button" class="btn btn-primary">Primary</button>
-		<button type="button" class="btn btn-success">Success</button>
-		<button type="button" class="btn btn-info">Info</button>
-		<button type="button" class="btn btn-warning">Warning</button>
-		<button type="button" class="btn btn-danger">Danger</button>
-
-		<br>
-		<div class="btn-group open">
-			<a class="btn btn-primary" href="#"><i class="fa fa-user fa-fw"></i> User</a>
-			<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">
-				<span class="fa fa-caret-down"></span></a>
-			<ul class="dropdown-menu">
-				<li><a href="#"><i class="fa fa-pencil fa-fw"></i> Edit</a></li>
-				<li><a href="#"><i class="fa fa-trash-o fa-fw"></i> Delete</a></li>
-				<li><a href="#"><i class="fa fa-ban fa-fw"></i> Ban</a></li>
-				<li class="divider"></li>
-				<li><a href="#"><i class="i"></i> Make admin</a></li>
-			</ul>
+		<div id="right">
+			<table>
+				<th colspan="2">Category</th>
+				<tr>
+					<td>details</td>
+					<td>details</td>
+				</tr>
+				<tr>
+					<td>details</td>
+					<td>details</td>
+				</tr>
+			</table>
+		</div>
+		<div id="footer">
+			<h2>footer information</h2>
 		</div>
 	</body>
 </html>
