--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -2,25 +2,96 @@
 <html>
 	<head>
 		<!-- css -->
-		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+		<link type="text/css" rel="stylesheet" href="bootstrap/bootstrap.css">
+		<link type="text/css" rel="stylesheet" href="mystylesheet.css"/>
+		<link type="text/css" rel="stylesheet" href="leaflet/leaflet.css">
+		<!-- jquery -->
+		<script type="text/javascript" src="leaflet/leaflet.js"></script>
+		<script type="text/javascript" src="leaflet/jquery.js"></script>
+		<script type="text/javascript" src="bootstrap/jquery.js"></script>
 		<!-- favicon link-->
 		<link rel="shortcut icon" href="images/simplecloud.ico" />
 		<title>Crowd Science Map</title>
 	</head>
 	<body>
 		<div id="header">
+			<h2>Crowd Science</h2>
 			<div id="navbar">
 				<ul>
-					<li><a href="https://facebook.com">Submit</a></li>
+					<li><a href="submit.html">Submit</a></li>
 					<li><a href="admin.html">Admiin</a></li>
-					<li>Log out</li>
-					<li>Log in/Register</li>
+					<li><a href="index.html">Log out</a></li>
+					<li><a href="login.html">Log in/Register</a></li>
 				</ul>
-			</div>
-			<h2>Crowd Science</h2>
+			</div>			
 		</div>
 		<div id="left">
-			<p>map</p>
+			<!-- map code from Location Change Mapper (failed to zoom in/out or move)-->
+			<div tabindex="0" class="leaflet-container leaflet-fade-anim" id="map" style="width: 100%; height: 500px; position: relative;">
+				<div style="transform: translate(0px, 0px);" class="leaflet-map-pane">
+					<div class="leaflet-tile-pane">
+						<div class="leaflet-layer">
+							<div class="leaflet-tile-container"></div>
+							<div class="leaflet-tile-container leaflet-zoom-animated">
+								<img src="map/11_004.jpg" style="height: 256px; width: 256px; transform: translate(229px, 90px);" class="leaflet-tile leaflet-tile-loaded">
+								<img src="map/11_003.jpg" style="height: 256px; width: 256px; transform: translate(485px, 90px);" class="leaflet-tile leaflet-tile-loaded">
+								<img src="map/10_003.jpg" style="height: 256px; width: 256px; transform: translate(229px, -166px);" class="leaflet-tile leaflet-tile-loaded">
+								<img src="map/10_002.jpg" style="height: 256px; width: 256px; transform: translate(485px, -166px);" class="leaflet-tile leaflet-tile-loaded">
+								<img src="map/12.jpg" style="height: 256px; width: 256px; transform: translate(229px, 346px);" class="leaflet-tile leaflet-tile-loaded">
+								<img src="map/12_002.jpg" style="height: 256px; width: 256px; transform: translate(485px, 346px);" class="leaflet-tile leaflet-tile-loaded">
+								<img src="map/11.jpg" style="height: 256px; width: 256px; transform: translate(-27px, 90px);" class="leaflet-tile leaflet-tile-loaded">
+								<img src="map/11_002.jpg" style="height: 256px; width: 256px; transform: translate(741px, 90px);" class="leaflet-tile leaflet-tile-loaded">
+								<img src="map/10_004.jpg" style="height: 256px; width: 256px; transform: translate(-27px, -166px);" class="leaflet-tile leaflet-tile-loaded">
+								<img src="map/10.jpg" style="height: 256px; width: 256px; transform: translate(741px, -166px);" class="leaflet-tile leaflet-tile-loaded">
+								<img src="map/12_003.jpg" style="height: 256px; width: 256px; transform: translate(-27px, 346px);" class="leaflet-tile leaflet-tile-loaded">
+								<img src="map/12_004.jpg" style="height: 256px; width: 256px; transform: translate(741px, 346px);" class="leaflet-tile leaflet-tile-loaded">
+							</div>
+						</div>
+					</div>
+					<!-- looks like those markers does not work properly -->
+					<div class="leaflet-objects-pane">
+						<div class="leaflet-shadow-pane">
+							<img style="margin-left: -12px; margin-top: -41px; width: 41px; height: 41px; transform: translate(468px, 161px);" class="leaflet-marker-shadow leaflet-zoom-animated" src="images/marker-shadow.png">
+							<img style="margin-left: -12px; margin-top: -41px; width: 41px; height: 41px; transform: translate(442px, 242px);" class="leaflet-marker-shadow leaflet-zoom-animated" src="images/marker-shadow.png">
+							<img style="margin-left: -12px; margin-top: -41px; width: 41px; height: 41px; transform: translate(1182px, 2177px);" class="leaflet-marker-shadow leaflet-zoom-animated" src="images/marker-shadow.png">
+							<img style="margin-left: -12px; margin-top: -41px; width: 41px; height: 41px; transform: translate(421px, 287px);" class="leaflet-marker-shadow leaflet-zoom-animated" src="images/marker-shadow.png">
+							<img style="margin-left: -12px; margin-top: -41px; width: 41px; height: 41px; transform: translate(410px, 245px);" class="leaflet-marker-shadow leaflet-zoom-animated" src="images/marker-shadow.png">
+							<img style="margin-left: -12px; margin-top: -41px; width: 41px; height: 41px; transform: translate(440px, 264px);" class="leaflet-marker-shadow leaflet-zoom-animated" src="images/marker-shadow.png">
+							<img style="margin-left: -12px; margin-top: -41px; width: 41px; height: 41px; transform: translate(440px, 264px);" class="leaflet-marker-shadow leaflet-zoom-animated" src="images/marker-shadow.png">
+						</div>
+						<div class="leaflet-overlay-pane"></div>
+						<div class="leaflet-marker-pane">
+							<img tabindex="0" style="margin-left: -12px; margin-top: -41px; width: 25px; height: 41px; transform: translate(468px, 161px); z-index: 161;" class="leaflet-marker-icon leaflet-zoom-animated leaflet-clickable" src="images/marker-icon.png">
+							<img tabindex="0" style="margin-left: -12px; margin-top: -41px; width: 25px; height: 41px; transform: translate(442px, 242px); z-index: 242;" class="leaflet-marker-icon leaflet-zoom-animated leaflet-clickable" src="images/marker-icon.png">
+							<img tabindex="0" style="margin-left: -12px; margin-top: -41px; width: 25px; height: 41px; transform: translate(1182px, 2177px); z-index: 2177;" class="leaflet-marker-icon leaflet-zoom-animated leaflet-clickable" src="images/marker-icon.png">
+							<img tabindex="0" style="margin-left: -12px; margin-top: -41px; width: 25px; height: 41px; transform: translate(421px, 287px); z-index: 287;" class="leaflet-marker-icon leaflet-zoom-animated leaflet-clickable" src="images/marker-icon.png">
+							<img tabindex="0" style="margin-left: -12px; margin-top: -41px; width: 25px; height: 41px; transform: translate(410px, 245px); z-index: 245;" class="leaflet-marker-icon leaflet-zoom-animated leaflet-clickable" src="images/marker-icon.png">
+							<img tabindex="0" style="margin-left: -12px; margin-top: -41px; width: 25px; height: 41px; transform: translate(440px, 264px); z-index: 264;" class="leaflet-marker-icon leaflet-zoom-animated leaflet-clickable" src="images/marker-icon.png">
+							<img tabindex="0" style="margin-left: -12px; margin-top: -41px; width: 25px; height: 41px; transform: translate(440px, 264px); z-index: 264;" class="leaflet-marker-icon leaflet-zoom-animated leaflet-clickable" src="images/marker-icon.png">
+						</div>
+						<div class="leaflet-popup-pane"></div>
+					</div>
+				</div>
+				<div class="leaflet-control-container">
+					<div class="leaflet-top leaflet-left">
+						<div class="leaflet-control-zoom leaflet-bar leaflet-control">
+							<a title="Zoom in" href="#" class="leaflet-control-zoom-in">+</a>
+							<a title="Zoom out" href="#" class="leaflet-control-zoom-out">-</a>
+						</div>
+					</div>
+					<div class="leaflet-top leaflet-right"></div>
+					<div class="leaflet-bottom leaflet-left"></div>
+					<div class="leaflet-bottom leaflet-right">
+						<div class="leaflet-control-attribution leaflet-control">
+							<a href="http://leafletjs.com/" title="A JS library for interactive maps">Leaflet</a>| Map data © 
+							<a href="http://openstreetmap.org/">OpenStreetMap</a> contributors, 
+							<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © 
+							<a href="http://mapbox.com/">Mapbox</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- map code end -->
 		</div>
 		<div id="right">
 			<table>
