--- a/crowdscience/submit.html
+++ b/crowdscience/submit.html
@@ -2,33 +2,20 @@
 <html>
 	<head>
 		<!-- css -->
-		<link rel="stylesheet" href="font-awesome-4.4.0/css/font-awesome.css">
 		<link type="text/css" rel="stylesheet" href="bootstrap/bootstrap.css">
 		<link type="text/css" rel="stylesheet" href="mystylesheet.css"/>
 		<!-- jquery -->
 		<script type="text/javascript" src="bootstrap/jquery.js"></script>
 		<!-- favicon link-->
 		<link rel="shortcut icon" href="images/simplecloud.ico" />
-		<title>Administrator</title>
+		<title>Submit</title>
 	</head>
 	<body>
 		<div id="header">
-			<h2>Administrator</h2>
-			<div id="navbar">
-				<ul>
-					<li><a href="index.html"><i class="fa fa-home"></i><span>Home</span></a></li>
-				</ul>
-			</div>
+			<h2>Submit Report</h2>
 		</div>
-		<div class="left-admin">
-			<ul>
-				<li>edit reports</li>
-				<li>edit event sets</li>
-				<li>create new event set</li>
-			</ul>	
-		</div>
-		<div id="right-admin">
-			<h2>right</h2>
+		<div id="content">
+			<a href="index.html" class="btn btn-info" role="button">Back</a>
 		</div>
 		<div id="footer">
 			<h2>footer information</h2>
