--- a/crowdscience/login.html
+++ b/crowdscience/login.html
@@ -1,29 +1,79 @@
-<html>
-	<head>
-		<!-- css -->
-		<link type="text/css" rel="stylesheet" href="mystylesheet.css"/>	
-		<!-- favicon link-->
-		<link rel="shortcut icon" href="images/simplecloud.ico" />
-		<!-- font-awesome link-->
-		<link rel="stylesheet" href="font-awesome-4.4.0/css/font-awesome.css">
-		<title>Login</title>
-	</head>
-	<body>
-		<h4>login page</h4>
-		
-		<ul class="nav nav-tabs" style="list-style-type:none;">
-			<li><a href="index.html"><i class="fa fa-home"></i><span>Home</span></a></li>
-		</ul>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Log in</title>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 	
-		<div class="input-group margin-bottom-sm">
-			<span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
-			<input class="form-control" type="text" placeholder="Email address">
-		</div>
-		<div class="input-group">
-			<span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
-			<input class="form-control" type="password" placeholder="Password">
-		</div>
+	<!-- Custom styles for this template -->
+    <link href="css/login.css" rel="stylesheet">
 	
-		
-	</body>
+
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script type="text/javascript" src="login.js"></script>
+  </head>
+  
+  
+  <body>
+<!-- Top Nav Bar -->
+  <nav class="navbar navbar-default" role="navigation">
+	<div class="container-fluid">
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="index.html"><span class="glyphicon glyphicon-home"></span> Home</a></li>
+        
+    </div><!-- /.navbar-collapse -->
+	</div><!-- /.container-fluid -->
+</nav>
+
+
+  </div>
+</nav>
+
+<div class="container-fluid">
+
+<div class="row">
+<div class="col-md-1"></div>
+<div class="col-md-5">
+  
+<form class="form-login" role="form" id="login_form_id">
+	<div class="form-group">
+		<input type="text" class="form-control" id="loginEmail" placeholder="Enter Email or Username">
+	</div>
+	<div class="form-group">
+		<input type="password" class="form-control" id="loginPassword" placeholder="Password">
+	</div>
+	<div class="alert alert-danger" role="alert" id="wrongLogin">The username and password combination could not be found</div>
+	<input class="btn btn-primary" type="submit" value="Submit">
+	<button type="submit" class="btn btn-default">Cancel</button>
+ </form>
+</div>
+</div>
+<div class="row">
+<div class="col-md-1"></div>
+<div class="col-md-5"><div class="well well-lg"><h2>Register!</h2><a href="register.html">Create an Account</a></div></div>
+</div>
+<div class="col-md-1"></div>
+</div>
+
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
