testing bootstrap necessity

--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -7,7 +7,7 @@
   
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
   <!-- Bootstrap core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="bootstrapbill/bootstrap.min.css" rel="stylesheet">
 
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
@@ -18,7 +18,7 @@
 	
 	<!-- scripts -->
    <script type="text/javascript" src="checkLogin.js"></script>
-   <script type="text/javascript" src="js/bootstrap.js"></script>
+   <script type="text/javascript" src="bootstrapbill/bootstrap.js"></script>
 <link rel="shortcut icon" href="images/simplecloud.ico" />
 
 </head>
