--- a/crowdscience/login.html
+++ b/crowdscience/login.html
@@ -7,10 +7,10 @@
     <title>Log in</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrapbill/bootstrap.min.css" rel="stylesheet">
 	
 	<!-- Custom styles for this template -->
-    <link href="css/login.css" rel="stylesheet">
+    <link href="bootstrapbill/login.css" rel="stylesheet">
 	
 
     <!-- Latest compiled and minified CSS -->
@@ -74,6 +74,6 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="bootstrapbill/bootstrap.min.js"></script>
   </body>
 </html>
