--- a/crowdscience/submit.html
+++ b/crowdscience/submit.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<!-- css -->
-		<link type="text/css" rel="stylesheet" href="bootstrap/bootstrap.css">
-		<link type="text/css" rel="stylesheet" href="mystylesheet.css"/>
+		<link type="text/css" rel="stylesheet" href="bootstrapbill/bootstrap.css">
+
 		<!-- jquery -->
 		<script type="text/javascript" src="bootstrap/jquery.js"></script>
 		<!-- favicon link-->
