--- a/crowdscience/login.html
+++ b/crowdscience/login.html
@@ -47,7 +47,6 @@
 <div class="container-fluid">
 
 <div class="row">
-<div class="col-md-1"></div>
 <div class="col-md-5">
   
 <form class="form-login" role="form" id="login_form_id">
@@ -63,11 +62,10 @@
  </form>
 </div>
 </div>
-<div class="row">
-<div class="col-md-1"></div>
-<div class="col-md-5"><div class="well well-lg"><h2>Register!</h2><a href="register.html">Create an Account</a></div></div>
+<div class="col-md-5">
+<div class="well well-lg"><h2>Register!</h2><a href="register.html">Create an Account</a>
 </div>
-<div class="col-md-1"></div>
+</div>
 </div>
 
 
