Added Select box for testing

--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -18,6 +18,7 @@
 	
 	<!-- scripts -->
    <script type="text/javascript" src="checkLogin.js"></script>
+   <script type="text/javascript" src="eventsetselect.js"></script>
    <script type="text/javascript" src="bootstrapbill/bootstrap.js"></script>
 <link rel="shortcut icon" href="images/simplecloud.ico" />
 
@@ -48,15 +49,21 @@
 	<h2>Crowd Science</h2>
 	
 <div class="row"> 
-		
-<div class="col-md-4">
+	<div class="col-md-4">
+		<div class="well well-lg"><h3>Select Event Set</h3>
+		<select id="selecteventset" class="form-control">
+				<option value="">Please Select an Event Set</option>
+				
+			</select>
+		</div>
 		<div class="well well-lg"><h3>Event Details Here</h3>
-Lions! Tigers! Bears! Oh My!
+		Lions! Tigers! Bears! Oh My!
 		</div>
 		<div class="well well-lg"><h3>Report an Event</h3>
-  <a href="login.html"><button type="button" class="btn btn-lg btn-primary">Report it!</button></a>
+		<a href="login.html"><button type="button" class="btn btn-lg btn-primary">Report it!</button></a>
 		</div>
-		</div>
-
+		
+	</div>
+</div>
 	</body>
 </html>
