Added Select box for testing

--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -56,7 +56,7 @@
 				
 			</select>
 		</div>
-		<div class="well well-lg"><h3>Event Details Here</h3>
+		<div class="well well-lg"><h3 id="bugs">Event Details Here</h3>
 		Lions! Tigers! Bears! Oh My!
 		</div>
 		<div class="well well-lg"><h3>Report an Event</h3>
