Added Select box for testing

--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -17,6 +17,7 @@
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js" ></script>
 	
 	<!-- scripts -->
+	   <script type="text/javascript" src="eventsetselect.js"></script>
    <script type="text/javascript" src="checkLogin.js"></script>
    <script type="text/javascript" src="eventsetselect.js"></script>
    <script type="text/javascript" src="bootstrapbill/bootstrap.js"></script>
