I have written untouchable functions.

--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -52,9 +52,7 @@
 <div class="row"> 
 	<div class="col-md-4">
 		<div class="well well-lg"><h3>Select Event Set</h3>
-		<select id="selecteventset" class="form-control">
-				<option value="">Please Select an Event Set</option>
-				
+		<select id="selecteventset">
 			</select>
 		</div>
 		<div class="well well-lg"><h3 id="bugs">Event Details Here</h3>
