--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -17,8 +17,8 @@
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js" ></script>
 	
 	<!-- scripts -->
-	   <script type="text/javascript" src="eventsetselect.js"></script>
-   <!--<script type="text/javascript" src="checkLogin.js"></script>-->
+
+   <script type="text/javascript" src="eventsetselect.js"></script>
    <script type="text/javascript" src="bootstrapbill/bootstrap.js"></script>
 <link rel="shortcut icon" href="images/simplecloud.ico" />
 
@@ -51,7 +51,9 @@
 <div class="row"> 
 	<div class="col-md-4">
 		<div class="well well-lg"><h3>Select Event Set</h3>
-		<select id="selecteventset">
+		<select id="selecteventset" class="form-control">
+				<option value="">Please Select an Event Set</option>
+				
 			</select>
 		</div>
 		<div class="well well-lg"><h3 id="bugs">Event Details Here</h3>
