The JS isn't doing its POST, or anything, really...

--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -18,6 +18,7 @@
 	
 	<!-- scripts -->
 
+   <script type="text/javascript" src="checkLogin.js"></script>
    <script type="text/javascript" src="eventsetselect.js"></script>
    <script type="text/javascript" src="bootstrapbill/bootstrap.js"></script>
 <link rel="shortcut icon" href="images/simplecloud.ico" />
