--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -14,7 +14,7 @@
 	
 	<!-- jQuery -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js" ></script>
+	<!--<script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js" ></script>-->
 	
 	<!-- scripts -->
 
