--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -82,11 +82,11 @@
 		
 		<div class="row">
 			<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
-				<div class="well well-lg" id="ev_table">
+				<div class="well well-lg" id="eventtable">
 					<div class="table-responsive">
 						<table class="table table-hover">
-							<thead id="ev_table_head"></thead>
-							<tbody id="ev_table_body"></tbody>
+							<thead id="eventtableheader"></thead>
+							<tbody id="eventtablebody"></tbody>
 						</table>
 					</div>
 				</div>
