Report interface. Pray with me that it all works the first time.

--- a/crowdscience/register.html
+++ b/crowdscience/register.html
@@ -7,24 +7,18 @@
 		
 		<title>Register User</title>
 		
-		<!-- jQuery -->
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		
-		<!-- lcmapper scripts -->
-		<script type="text/javascript" src="register.js"></script>
-		
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-		
-		<!-- Custom styles for this template -->
+		<!-- Landscape Mapper bootstrap CSS -->
+		<link href="bootstrapbill/bootstrap.min.css" rel="stylesheet">
+		<!-- Landscape Mapper register CSS -->
 		<link href="bootstrapbill/register.css" rel="stylesheet">
 		
+		<!-- jQuery JS -->
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<!-- Landscape Mapper register JS -->
+		<script type="text/javascript" src="register.js"></script>
 		
-		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-		<!--[if lt IE 9]>
-			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
+		
+		
 	</head>
 	<body>
 		
@@ -36,7 +30,7 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="index.html"><span class="glyphicon glyphicon-home"></span> Home</a></li>
-						
+					</ul>
 					</div><!-- /.navbar-collapse -->
 				</div><!-- /.container-fluid -->
 			</nav>
@@ -79,4 +73,4 @@
 		</body>
 		
 		
-	</html> 	
+	</html> 		
