--- a/crowdscience/login.html
+++ b/crowdscience/login.html
@@ -6,28 +6,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Log in</title>
 		
-		<!-- Bootstrap -->
+		<!-- Landscape Mapper bootstrap CSS -->
 		<link href="bootstrapbill/bootstrap.min.css" rel="stylesheet">
-		
-		<!-- Custom styles for this template -->
+		<!-- Landscape Mapper login CSS -->
 		<link href="bootstrapbill/login.css" rel="stylesheet">
 		
-		
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
-			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
+		<!-- jQuery JS -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<!-- Landscape Mapper Login JS -->
 		<script type="text/javascript" src="login.js"></script>			
+		<!-- Landscape Mapper bootstrap JS -->
+		<script src="bootstrapbill/bootstrap.min.js"></script>
 		
-		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-			<!-- Include all compiled plugins (below), or include individual files as needed -->
-			<script src="bootstrapbill/bootstrap.min.js"></script>
 	</head>
 	
 	
@@ -64,14 +54,14 @@
 						<button type="submit" class="btn btn-default">Cancel</button>
 					</form>
 				</div>
-				</div>
-				<div class="col-md-5">
-					<div class="well well-lg"><h2>Register!</h2><a href="register.html">Create an Account</a>
-					</div>
+			</div>
+			<div class="col-md-5">
+				<div class="well well-lg"><h2>Register!</h2><a href="register.html">Create an Account</a>
 				</div>
 			</div>
-			
-			
-
-		</body>
-	</html>		
+		</div>
+		
+		
+		
+	</body>
+</html>		
