--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -9,6 +9,8 @@
 		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
 		<!-- Landscape Mapper bootstrap CSS -->
 		<link href="bootstrapbill/bootstrap.min.css" rel="stylesheet">
+		    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 		
 		<!-- jQuery JS -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
