And now, glorious debugging.

--- a/crowdscience/register.html
+++ b/crowdscience/register.html
@@ -11,6 +11,8 @@
 		<link href="bootstrapbill/bootstrap.min.css" rel="stylesheet">
 		<!-- Landscape Mapper register CSS -->
 		<link href="bootstrapbill/register.css" rel="stylesheet">
+		<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 		
 		<!-- jQuery JS -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
