--- a/crowdscience/report.html
+++ b/crowdscience/report.html
@@ -13,6 +13,8 @@
 		<link href="bootstrapbill/bootstrap.min.css" rel="stylesheet">
 		<!-- Landscape Mapper report CSS -->
 		<link href="bootstrapbill/report.css" rel="stylesheet">
+		<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 		
 		
 		<!-- jQuery JS -->
