--- a/crowdscience/login.html
+++ b/crowdscience/login.html
@@ -10,6 +10,8 @@
 		<link href="bootstrapbill/bootstrap.min.css" rel="stylesheet">
 		<!-- Landscape Mapper login CSS -->
 		<link href="bootstrapbill/login.css" rel="stylesheet">
+		<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 		
 		<!-- jQuery JS -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
