Adding view event page

--- a/crowdscience/viewEvent.html
+++ b/crowdscience/viewEvent.html
@@ -4,19 +4,24 @@
 		
 		<meta charset="utf-8">
 		<title>Location Change Mapper</title>
-		
-		<!-- jQuery -->
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		
-		<!-- Bootstrap core CSS -->
+
+		<!-- Landscape Mapper bootstrap CSS -->
 		<link href="bootstrapbill/bootstrap.min.css" rel="stylesheet">
 		<!-- Custom styles for this template -->
 		<link href="bootstrapbill/viewEvent.css" rel="stylesheet">
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+
+		<!-- jQuery JS -->
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		
-		<!-- lcmapper scripts -->
-		<script type="text/javascript" src="viewEvent.js"></script>
+		<!-- Landscape Mapper bootstrap JS -->
+		<script type="text/javascript" src="bootstrapbill/bootstrap.js"></script>		
+		<!-- Landscape Mapper CheckLogin JS -->
 		<script type="text/javascript" src="checkLogin.js"></script>
-		<script type="text/javascript" src="bootstrapbill/bootstrap.js"></script>
+		<!-- Crowd Science Mapper viewEvent JS -->
+		<script type="text/javascript" src="viewEvent.js"></script>
+
 		
 	</head>
 	<body style="padding-left: 15px; padding-bottom: 50px; overflow-x: hidden; background-color: #eee;">
