Adding view event page

--- a/crowdscience/viewEvent.html
+++ b/crowdscience/viewEvent.html
@@ -3,7 +3,7 @@
 	<head>
 		
 		<meta charset="utf-8">
-		<title>Location Change Mapper</title>
+		<title>Crowd Science Mapper</title>
 
 		<!-- Landscape Mapper bootstrap CSS -->
 		<link href="bootstrapbill/bootstrap.min.css" rel="stylesheet">
