Adding view event page

--- a/crowdscience/viewEvent.html
+++ b/crowdscience/viewEvent.html
@@ -22,7 +22,15 @@
 		<!-- Crowd Science Mapper viewEvent JS -->
 		<script type="text/javascript" src="viewEvent.js"></script>
 
-		
+		<script type="text/javascript">
+		$(document).ready(function() {
+			$('.carousel').carousel({
+				interval: 5000,
+				cycle: true
+			});
+		});
+	</script>
+	
 	</head>
 	<body style="padding-left: 15px; padding-bottom: 50px; overflow-x: hidden; background-color: #eee;">
 		
