Adding view event page

--- a/crowdscience/viewEvent.html
+++ b/crowdscience/viewEvent.html
@@ -50,11 +50,6 @@
 		
 		
 		<div id="event_info" class="col-md-6" style="float:right">
-			<b>Location:</b> <input class="event-control" name="location" id="location"  value="" type="text" disabled  />
-			<b>Date:</b> <input class="event-control" name="date" id="date"  value="" type="text" disabled  />
-			<b>Observer:</b> <input class="event-control" name="observer" id="observer"  value="" type="text" disabled  />
-			<b>Change Type:</b> <input class="event-control" name="type" id="type"  value="" type="text" disabled  />
-			<b>Status:</b> <input class="event-control" name="status" id="status"  value="" type="text" disabled  />
 		</div>
 		
 		<div id="carousel_div" class="carousel_div" >
@@ -66,7 +61,7 @@
 				</ol>
 				
 				<!-- Wrapper for slides -->
-				<div class="carousel-inner" id="image_inner" style = "width:400px ; height:400px">
+				<div class="carousel-inner" id="image_inner" style = "width:100% ; height:100%">
 					<div class="item active">
 						<img id="first_image" src="">
 					</div>
