--- a/crowdscience/viewEvent.html
+++ b/crowdscience/viewEvent.html
@@ -61,7 +61,7 @@
 				</ol>
 				
 				<!-- Wrapper for slides -->
-				<div class="carousel-inner" id="image_inner" style = "width:100% ; height:100%; vertical-align:middle; text-align:center " >
+				<div class="carousel-inner" id="image_inner" style = "max-width:100% ; max-height:100%" >
 					<div class="item active">
 						<img id="first_image" src="">
 					</div>
