--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -75,6 +75,7 @@
 		<h2>Crowd Science</h2>
 		
 		<div class="row">
+			<div class="col-md-8"><div id="map" style="width: 100%; height: 500px"></div></div>
 			<div class="col-md-4">
 				<div class="well well-lg">
 					<h3>Report an Event</h3>
