Add map to main page

--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -76,6 +76,29 @@
 		
 		<div class="row">
 			<div class="col-md-8" id="outer_map"></div>
+			<div class="col-md-4"><div id="carousel_div" class="carousel_div" align="center" >
+				<!-- Image Carousel -->
+	<div id="image_carousel" class="carousel slide" data-ride="carousel" >
+	  <!-- Indicators -->
+	  <ol class="carousel-indicators" id="image_targets">
+		<li data-target="#image_carousel" data-slide-to="0" class="active"></li>
+	  </ol>
+	  <!-- Wrapper for slides -->
+	  <div class="carousel-inner" id="image_inner" style = "width:50%;max-height: 350px" >
+		<div class="item active">
+		  <img id="first_image" src="">
+		</div>
+	  </div>
+
+	  <!-- Controls -->
+	  <a class="left carousel-control" href="#image_carousel" role="button" data-slide="prev">
+		<span class="glyphicon glyphicon-chevron-left"></span>
+	  </a>
+	  <a class="right carousel-control" href="#image_carousel" role="button" data-slide="next">
+		<span class="glyphicon glyphicon-chevron-right"></span>
+	  </a>
+	</div>
+			
 			<div class="col-md-4">
 				<div class="well well-lg">
 					<h3>Report an Event</h3>
