--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -84,7 +84,7 @@
 		<li data-target="#image_carousel" data-slide-to="0" class="active"></li>
 	  </ol>
 	  <!-- Wrapper for slides -->
-	  <div class="carousel-inner" id="image_inner" style = "width:50%;max-height: 350px" >
+	  <div class="carousel-inner" id="image_inner" style = "width:50%;height: 350px" >
 		<div class="item active">
 		  <img id="first_image" src="">
 		</div>
