--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -76,7 +76,7 @@
 		
 		<div class="row">
 			<div class="col-md-8" id="outer_map"></div>
-			<div class="col-md-4"><div id="carousel_div" class="carousel_div" align="center" >
+			<div class="col-md-4"><div id="carousel_div" class="carousel_div" align="center" style = "height: 350px">
 				<!-- Image Carousel -->
 				<div id="image_carousel" class="carousel slide" data-ride="carousel" >
 					<!-- Indicators -->
@@ -84,7 +84,7 @@
 						<li data-target="#image_carousel" data-slide-to="0" class="active"></li>
 					</ol>
 					<!-- Wrapper for slides -->
-					<div class="carousel-inner" id="image_inner" style = "width:100%;height: 350px" >
+					<div class="carousel-inner" id="image_inner" style = "width:100%;height: 100%" >
 						<div class="item active">
 							<img id="first_image" src="">
 						</div>
