--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -76,9 +76,9 @@
 		
 		<div class="row">
 			<div class="col-md-8" id="outer_map"></div>
-			<div class="col-md-4"><div id="carousel_div" class="carousel_div" align="center" style = "height: 350px">
+			<div class="col-md-4"><div id="carousel_div" class="carousel_div" align="center" >
 				<!-- Image Carousel -->
-				<div id="image_carousel" class="carousel slide" data-ride="carousel" >
+				<div id="image_carousel" class="carousel slide" data-ride="carousel" style = "height: 350px">
 					<!-- Indicators -->
 					<ol class="carousel-indicators" id="image_targets">
 						<li data-target="#image_carousel" data-slide-to="0" class="active"></li>
