--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -84,7 +84,7 @@
 						<li data-target="#image_carousel" data-slide-to="0" class="active"></li>
 					</ol>
 					<!-- Wrapper for slides -->
-					<div class="carousel-inner" id="image_inner" style = "width:100%;height: 100%" >
+					<div class="carousel-inner" id="image_inner" style = "max-width:100%;max-height: 100%" >
 						<div class="item active">
 							<img id="first_image" src="">
 						</div>
