--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -86,7 +86,7 @@
 					<!-- Wrapper for slides -->
 					<div class="carousel-inner" id="image_inner" style = "height: 350px">
 						<div class="item active">
-							<img id="first_image" style = "width:100%;height: 100%" src="">
+							<img id="first_image" style = "max-width:100%;max-height:350px" src="">
 						</div>
 					</div>
 					
