--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -86,7 +86,7 @@
 					<!-- Wrapper for slides -->
 					<div class="carousel-inner" id="image_inner">
 						<div class="item active">
-							<img id="first_image" style = "max-width:100%;max-height:350px; height:100%; vertical-align:middle" src="">
+							<img id="first_image" style = "max-width:100%;max-height:350px;vertical-align:middle" src="">
 						</div>
 					</div>
 					
