Add image carousel to main page

--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -84,9 +84,9 @@
 						<li data-target="#image_carousel" data-slide-to="0" class="active"></li>
 					</ol>
 					<!-- Wrapper for slides -->
-					<div class="carousel-inner" id="image_inner">
+					<div class="carousel-inner" id="image_inner" >
 						<div class="item active">
-							<img id="first_image" style = "max-width:100%;max-height:350px;vertical-align:middle" src="">
+							<img id="first_image" style = "max-width:100%;max-height:350px;display: inline-block;vertical-align:middle" src="">
 						</div>
 					</div>
 					
