--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -86,7 +86,7 @@
 					<!-- Wrapper for slides -->
 					<div class="carousel-inner" id="image_inner" >
 						<div class="item active">
-							<span style="height=100%;display:inline-block;vertical-align:middle"></span><img id="first_image" style = "max-width:100%;max-height:350px;vertical-align:middle" src="">
+							<img id="first_image" style = "max-width:100%;max-height:350px" src="">
 						</div>
 					</div>
 					
