--- a/crowdscience/login.html
+++ b/crowdscience/login.html
@@ -46,14 +46,14 @@
 					
 					<form class="form-login" role="form" id="login_form_id">
 						<div class="form-group">
-							<input type="text" class="form-control" id="loginEmail" placeholder="Enter Email or Username">
+							<input type="text" class="form-control" id="loginEmail" placeholder="Enter Email or Username"/>
 						</div>
 						<div class="form-group">
-							<input type="password" class="form-control" id="loginPassword" placeholder="Password">
+							<input type="password" class="form-control" id="loginPassword" placeholder="Password"/>
 						</div>
 						<div class="alert alert-danger" role="alert" id="wrongLogin">The username and password combination could not be found</div>
-						<input class="btn btn-primary" type="submit" value="Submit">
-					<a href="index.html"><button class="btn btn-default">Cancel</button></a>
+						<input class="btn btn-primary" type="submit" value="Submit"/>
+						<button type="submit" class="btn btn-default">Cancel</button>
 					</form>
 				</div>
 			</div>
