--- a/crowdscience/login.html
+++ b/crowdscience/login.html
@@ -53,7 +53,7 @@
 						</div>
 						<div class="alert alert-danger" role="alert" id="wrongLogin">The username and password combination could not be found</div>
 						<input class="btn btn-primary" type="submit" value="Submit"/>
-						<button type="submit" class="btn btn-default">Cancel</button>
+						<button href="index.html" class="btn btn-default">Cancel</button>
 					</form>
 				</div>
 			</div>
