--- a/crowdscience/login.html
+++ b/crowdscience/login.html
@@ -53,6 +53,7 @@
 						</div>
 						<div class="alert alert-danger" role="alert" id="wrongLogin">The username and password combination could not be found</div>
 						<input class="btn btn-primary" type="submit" value="Submit"/>
+<input class="btn btn-default" onClick="parent.location='index.html'" type="button" value="Cancel" />
 					</form>
 				</div>
 			</div>
