Doxygen and small code changes.

--- a/crowdscience/viewEvent.html
+++ b/crowdscience/viewEvent.html
@@ -42,6 +42,14 @@
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="index.html"><span class="glyphicon glyphicon-home"></span>Home</a>
 						</li>
+						<div class="nav navbar-nav navbar-right">
+							<ul class="nav navbar-nav navbar-right">
+							
+							<!-- Report Event -->
+							<li><a id="report" href="report.html"><span class="glyphicon glyphicon-pencil"></span> Report Event</a></li>
+						
+						</ul>
+					</div>
 					</ul>
 				</div> <!-- /.navbar-collapse -->
 			</div> <!-- /.container-fluid -->
