--- a/crowdscience/index.html
+++ b/crowdscience/index.html
@@ -71,9 +71,7 @@
 				</div> <!-- /.navbar-collapse -->
 			</div> <!-- /.container-fluid -->
 		</nav>
-		
-		<h2>Crowd Science</h2>
-		
+
 		<div class="row">
 			<div class="col-md-8" id="outer_map"></div>
 			<div class="col-md-4"><div id="carousel_div" class="carousel_div" align="center" >
@@ -101,7 +99,7 @@
 			<div class="col-md-4">
 				<div class="well well-lg">
 					<h3>Report an Event</h3>
-					<a href="login.html">
+					<a href="report.html">
 						<button type="button" class="btn btn-lg btn-primary">Report it!</button></a>
 					</div>
 				</div>
